--- a/src/AdministrationBundle/Resources/views/installation/sensors.html.twig
+++ b/src/AdministrationBundle/Resources/views/installation/sensors.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import 'macros.html.twig' as mc %}
 
 {% block contents %}
     {% if app.user %}
@@ -12,7 +13,7 @@
                         <div class="row">
                             <div class="panel-body">
                                 <h4 ng-cloak>
-                                    <i class="fa fa-sitemap"></i> {{ ng.translate('CONFIGURATION.LABEL') }} - {{ ng.translate('INSTALLATION.SENSORS') }}
+                                    <i class="fa fa-sitemap"></i> {{ mc.translate('CONFIGURATION.LABEL') }} - {{ mc.translate('INSTALLATION.SENSORS') }}
                                 </h4>
                                 <hr/>
                                 <div class="well table-responsive">
@@ -20,7 +21,7 @@
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
                                                 <input st-search class="form-control input-sm"
-                                                       placeholder="{{ ng.translate('SEARCH') }}" type="text" ng-cloak/>
+                                                       placeholder="{{ mc.translate('SEARCH') }}" type="text" ng-cloak/>
                                             </div>
                                         </div>
                                         <br/>
@@ -30,17 +31,17 @@
                                                     <thead>
                                                     <tr>
                                                         <th st-sort="TypeId" class="st-sortable col-md-1 col-xs-1"
-                                                            ng-cloak>{{ ng.translate('INSTALLATION.TYPE') }}</th>
+                                                            ng-cloak>{{ mc.translate('INSTALLATION.TYPE') }}</th>
                                                         <th st-sort="Name" class="st-sortable col-md-3 col-xs-3"
-                                                            ng-cloak>{{ ng.translate('INSTALLATION.NAME') }}</th>
+                                                            ng-cloak>{{ mc.translate('INSTALLATION.NAME') }}</th>
                                                         <th st-sort="Name" class="st-sortable col-md-1 col-xs-1"
-                                                            ng-cloak>{{ ng.translate('INSTALLATION.NUMBER') }}</th>
+                                                            ng-cloak>{{ mc.translate('INSTALLATION.NUMBER') }}</th>
                                                         <th st-sort="Uid" class="st-sortable col-md-3 col-xs-3"
-                                                            ng-cloak>{{ ng.translate('INSTALLATION.UID') }}</th>
+                                                            ng-cloak>{{ mc.translate('INSTALLATION.UID') }}</th>
                                                         <th st-sort="IsEnabled" class="st-sortable col-md-2 col-xs-2 text-right"
-                                                            ng-cloak>{{ ng.translate('INSTALLATION.ACTIVE') }}</th>
+                                                            ng-cloak>{{ mc.translate('INSTALLATION.ACTIVE') }}</th>
                                                         <th class="st-nosort col-md-2 col-xs-2 text-right"
-                                                            ng-cloak>{{ ng.translate('ACTION') }}</th>
+                                                            ng-cloak>{{ mc.translate('ACTION') }}</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
@@ -77,7 +78,7 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <button ng-click="reloadPage()" class="btn btn-sm btn-primary pull-left" ng-cloak>
-                                                <i class="fa fa-refresh"></i> {{ ng.translate('REFRESH') }}
+                                                <i class="fa fa-refresh"></i> {{ mc.translate('REFRESH') }}
                                             </button>
                                         </div>
                                     </div>
