--- a/src/AdministrationBundle/Resources/views/regions/region_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/regions/region_form.html.twig
@@ -1,3 +1,5 @@
+{% import 'macros.html.twig' as mc %}
+
 <form class="form-horizontal" method="post" name="regionForm"
       action="{{ url('administration_region_save', { 'regionid' : region.Id }) }}" novalidate>
     <div class="panel-body">
@@ -6,7 +8,7 @@
             <input name="Id" type="hidden" value="{{ region.Id }}"/>
             <div class="form-group">
                 <label class="control-label col-md-2"
-                       ng-cloak>{{ ng.translate('REGIONS.NAME') }}</label>
+                       ng-cloak>{{ mc.translate('REGIONS.NAME') }}</label>
                 <div class="col-md-6">
                     <input class="form-control input-sm" name="Name" type="text"
                            ng-model="regions.region().Name" validation="min_len:3|required" no-enter/>
@@ -14,7 +16,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label col-md-2"
-                       ng-cloak>{{ ng.translate('REGIONS.DESCRIPTION') }}</label>
+                       ng-cloak>{{ mc.translate('REGIONS.DESCRIPTION') }}</label>
                 <div class="col-md-10">
                         <textarea class="form-control input-sm no-resize" name="Description"
                                   ng-model="regions.region().Description" rows="5"></textarea>
@@ -28,10 +30,10 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="{{ path('administration_regions') }}" class="btn btn-sm btn-default pull-left"
-                   ng-click="BE.showLoader(true)" ng-cloak><i class="fa fa-close"></i> {{ ng.translate('CANCEL') }}</a>
+                   ng-click="BE.showLoader(true)" ng-cloak><i class="fa fa-close"></i> {{ mc.translate('CANCEL') }}</a>
                 <button type="submit" class="btn btn-sm btn-success pull-right" ng-click="BE.showLoader(true)"
                         ng-disabled="regionDataForm.$invalid">
-                    <i class="fa fa-floppy-o" ng-cloak></i> {{ ng.translate('SAVE') }}
+                    <i class="fa fa-floppy-o" ng-cloak></i> {{ mc.translate('SAVE') }}
                 </button>
             </div>
         </div>
