--- a/src/AdministrationBundle/Resources/views/companies/add_company.html.twig
+++ b/src/AdministrationBundle/Resources/views/companies/add_company.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import 'macros.html.twig' as mc %}
 
 {% import _self as form %}
 
@@ -17,7 +18,7 @@
                     <div class="row">
                         <div class="panel-body">
                             <h4 ng-cloak>
-                                <i class="fa fa-building-o"></i> {{ ng.translate('COMPANY.LABEL') }}
+                                <i class="fa fa-building-o"></i> {{ mc.translate('COMPANY.LABEL') }}
                             </h4>
                             <hr/>
                             {%  include 'AdministrationBundle:companies:company_form.html.twig' %}
