--- a/src/AdministrationBundle/Resources/views/companies/companies.html.twig
+++ b/src/AdministrationBundle/Resources/views/companies/companies.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import 'macros.html.twig' as mc %}
 
 {% block contents %}
     {% if app.user %}
@@ -14,7 +15,7 @@
                         <div class="row">
                             <div class="panel-body">
                                 <h4 ng-cloak>
-                                    <i class="fa fa-building-o"></i> {{ ng.translate('COMPANY.COMPANIES') }}
+                                    <i class="fa fa-building-o"></i> {{ mc.translate('COMPANY.COMPANIES') }}
                                 </h4>
                                 <hr/>
                                 <div class="well table-responsive">
@@ -22,7 +23,7 @@
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
                                                 <input st-search class="form-control input-sm"
-                                                       placeholder="{{ ng.translate('SEARCH') }}" type="text" ng-cloak/>
+                                                       placeholder="{{ mc.translate('SEARCH') }}" type="text" ng-cloak/>
                                             </div>
                                         </div>
                                         <br/>
@@ -32,19 +33,19 @@
                                                     <thead>
                                                     <tr>
                                                         <th st-sort="Name" class="st-sortable col-md-8 col-xs-7"
-                                                            ng-cloak>{{ ng.translate('COMPANY.NAME') }}</th>
+                                                            ng-cloak>{{ mc.translate('COMPANY.NAME') }}</th>
                                                         <th st-sort="IsEnabled" class="st-sortable col-md-1 col-xs-2 text-right"
-                                                            ng-cloak>{{ ng.translate('COMPANY.ACTIVE') }}</th>
+                                                            ng-cloak>{{ mc.translate('COMPANY.ACTIVE') }}</th>
                                                         <th class="st-nosort text-right col-md-2 col-xs-3"
-                                                            ng-cloak>{{ ng.translate('ACTION') }}</th>
+                                                            ng-cloak>{{ mc.translate('ACTION') }}</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
                                                     <tr ng-repeat="row in companiesCollection">
                                                         <td ng-cloak>{{ '{{ row.Name }}' }}</td>
                                                         <td ng-cloak class="text-right">
-                                                            <label class="label label-success tag-label" ng-show="{{ '{{ row.IsEnabled }}' }}">{{ ng.translate('YES') }}</label>
-                                                            <label class="label label-danger tag-label" ng-hide="{{ '{{ row.IsEnabled }}' }}">{{ ng.translate('NO') }}</label>
+                                                            <label class="label label-success tag-label" ng-show="{{ '{{ row.IsEnabled }}' }}">{{ mc.translate('YES') }}</label>
+                                                            <label class="label label-danger tag-label" ng-hide="{{ '{{ row.IsEnabled }}' }}">{{ mc.translate('NO') }}</label>
                                                         </td>
                                                         <td>
                                                             <div class="pull-right">
@@ -70,7 +71,7 @@
                                         <div class="col-md-12 col-xs-12">
                                             <button class="btn btn-sm btn-success pull-right"
                                                     ng-click="addCompany()" ng-cloak>
-                                                <i class="fa fa-plus"></i> {{ ng.translate('ADD') }}</button>
+                                                <i class="fa fa-plus"></i> {{ mc.translate('ADD') }}</button>
                                         </div>
                                     </div>
                                 </div>
