--- a/src/AdministrationBundle/Resources/views/configuration/stores.html.twig
+++ b/src/AdministrationBundle/Resources/views/configuration/stores.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import 'macros.html.twig' as mc %}
 
 {% block contents %}
     {% if app.user %}
@@ -14,7 +15,7 @@
                         <div class="row">
                             <div class="panel-body">
                                 <h4 ng-cloak>
-                                    <i class="fa fa-map-marker"></i> {{ ng.translate('CONFIGURATION.LABEL') }} - {{ ng.translate('CONFIGURATION.STORES') }}
+                                    <i class="fa fa-map-marker"></i> {{ mc.translate('CONFIGURATION.LABEL') }} - {{ mc.translate('CONFIGURATION.STORES') }}
                                 </h4>
                                 <hr/>
                                 <div class="well table-responsive">
@@ -22,7 +23,7 @@
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
                                                 <input st-search class="form-control input-sm"
-                                                       placeholder="{{ ng.translate('SEARCH') }}" type="text" ng-cloak/>
+                                                       placeholder="{{ mc.translate('SEARCH') }}" type="text" ng-cloak/>
                                             </div>
                                         </div>
                                         <br/>
@@ -32,15 +33,15 @@
                                                     <thead>
                                                     <tr>
                                                         <th st-sort="Name" class="st-sortable col-md-4 col-xs-3"
-                                                            ng-cloak>{{ ng.translate('STORE.NAME') }}</th>
+                                                            ng-cloak>{{ mc.translate('STORE.NAME') }}</th>
                                                         <th st-sort="MainCompany" class="st-sortable col-md-4 col-xs-3"
-                                                            ng-cloak>{{ ng.translate('STORE.COMPANY') }}</th>
+                                                            ng-cloak>{{ mc.translate('STORE.COMPANY') }}</th>
                                                         <th st-sort="IsEnabled" class="st-sortable col-md-1 col-xs-3 text-center"
-                                                            ng-cloak>{{ ng.translate('STORE.DEVICE_GROUPS') }}</th>
+                                                            ng-cloak>{{ mc.translate('STORE.DEVICE_GROUPS') }}</th>
                                                         <th st-sort="IsEnabled" class="st-sortable col-md-1 col-xs-3 text-right"
-                                                            ng-cloak>{{ ng.translate('STORE.ACTIVE') }}</th>
+                                                            ng-cloak>{{ mc.translate('STORE.ACTIVE') }}</th>
                                                         <th class="st-nosort col-md-1 col-xs-2 text-right"
-                                                            ng-cloak>{{ ng.translate('ACTION') }}</th>
+                                                            ng-cloak>{{ mc.translate('ACTION') }}</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
@@ -49,8 +50,8 @@
                                                         <td ng-cloak>{{ '{{ row.MainCompany.Name }}' }}</td>
                                                         <td ng-cloak class="text-center">{{ '{{ row.DeviceGroups.length ? row.DeviceGroups.length : 0 }}' }}</td>
                                                         <td ng-cloak class="text-right">
-                                                            <label class="label label-success tag-label" ng-show="{{ '{{ row.IsEnabled }}' }}">{{ ng.translate('YES') }}</label>
-                                                            <label class="label label-danger tag-label" ng-hide="{{ '{{ row.IsEnabled }}' }}">{{ ng.translate('NO') }}</label>
+                                                            <label class="label label-success tag-label" ng-show="{{ '{{ row.IsEnabled }}' }}">{{ mc.translate('YES') }}</label>
+                                                            <label class="label label-danger tag-label" ng-hide="{{ '{{ row.IsEnabled }}' }}">{{ mc.translate('NO') }}</label>
                                                         </td>
                                                         <td>
                                                             <div class="pull-right">
