--- a/src/AdministrationBundle/Resources/views/configuration/tree_view.html.twig
+++ b/src/AdministrationBundle/Resources/views/configuration/tree_view.html.twig
@@ -1,3 +1,5 @@
+{% import 'macros.html.twig' as mc %}
+
 <div class="panel-body">
     <div class="well">
         <div class="row">
@@ -7,7 +9,7 @@
                     <ol ui-tree-nodes ng-model="groupsCollection" data-ui-tree="treeOptions"  data-empty-placeholder-enabled="true">
                         <li ng-repeat="group in groupsCollection" ui-tree-node data-expand-on-hover="true" ng-if="group.MainStore||group.Group">
                             <div ui-tree-handle class="tree-node tree-node-content angular-ui-tree-handle"
-                                 ng-class="{ 'disabled-handle': group.isEnabled, 'group-handle': group.TypeId == 1, 'sensor-handle': group.TypeId != 1 }">
+                                 ng-class="{ 'disabled-handle': group.isEnabled, 'group-handle': group.TypeId == 1, 'sensor-handle': !group.IsCopy, 'sensor-handle-copy': group.IsCopy }">
                                 <div class="row" ng-show="group.TypeId==1">
                                     <div class="col-md-10 col-xs-8">
                                         <span class="btn-group" ng-cloak>
@@ -64,9 +66,15 @@
                                             </a>
                                             <a class="btn btn-default btn-xs"
                                                ng-click="unlinkDevice(group)"
-                                               ng-show="group.TypeId==2||group.TypeId==3"
+                                               ng-show="group.TypeId!=1&&!group.IsCopy"
                                                data-nodrag>
                                                 <span class="fa fa-unlink fa-fw"></span>
+                                            </a>
+                                            <a class="btn btn-info btn-xs"
+                                               ng-click="copyDevice(group)"
+                                               ng-show="(group.TypeId==3||group.TypeId==4)&&!group.IsCopy"
+                                               data-nodrag>
+                                                <span class="fa fa-copy fa-fw"></span>
                                             </a>
                                         </div>
                                     </div>
@@ -74,7 +82,7 @@
                             </div>
                             <ol ui-tree-nodes="" ng-model="group.devices" ng-class="{ hidden: collapsed }">
                                 <li ng-repeat="device in group.devices" ui-tree-node data-expand-on-hover="true" ng-if="device.MainStore||device.Group">
-                                    <div ui-tree-handle class="tree-node tree-node-content angular-ui-tree-handle sensor-handle">
+                                    <div ui-tree-handle class="tree-node tree-node-content angular-ui-tree-handle" ng-class="{ 'sensor-handle': !device.IsCopy, 'sensor-handle-copy': device.IsCopy }">
                                         <div class="row">
                                             <div class="col-md-10 col-xs-7" ng-cloak>
                                                 <div class="row">
@@ -105,9 +113,15 @@
                                                     </a>
                                                     <a class="btn btn-default btn-xs"
                                                        ng-click="unlinkDevice(device)"
-                                                       ng-show="device.TypeId==2||device.TypeId==3"
+                                                       ng-show="device.TypeId!=1&&!device.IsCopy"
                                                        data-nodrag>
                                                         <span class="fa fa-unlink fa-fw"></span>
+                                                    </a>
+                                                    <a class="btn btn-info btn-xs"
+                                                       ng-click="copyDevice(device)"
+                                                       ng-show="(device.TypeId==3||device.TypeId==4)&&!device.IsCopy"
+                                                       data-nodrag>
+                                                        <span class="fa fa-copy fa-fw"></span>
                                                     </a>
                                                 </div>
                                             </div>
@@ -123,7 +137,7 @@
             <div class="col-md-2">
                 <div style="padding-top: 10px">
                     <button class="btn btn-sm btn-success pull-right" ng-click="addDeviceGroup()" ng-cloak>
-                        <i class="fa fa-plus fa-fw"></i> {{ ng.translate('SENSOR_GROUP.ADD') }}
+                        <i class="fa fa-plus fa-fw"></i> {{ mc.translate('SENSOR_GROUP.ADD') }}
                     </button>
                 </div>
             </div>
@@ -134,9 +148,9 @@
     <div class="row" ng-switch="activePage">
         <div class="col-md-12" ng-switch-when="treeView">
             <a href="{{ path('configuration_stores') }}" class="btn btn-sm btn-default pull-left"
-               ng-click="BE.showLoader(true)"><i class="fa fa-close" ng-cloak></i> {{ ng.translate('CANCEL') }}</a>
-            <button type="button" class="btn btn-sm btn-success pull-right" ng-click="saveStore()">
-                <i class="fa fa-floppy-o" ng-cloak></i> {{ ng.translate('SAVE') }}
+               ng-click="BE.showLoader(true)" ng-cloak><i class="fa fa-close"></i> {{ mc.translate('CANCEL') }}</a>
+            <button type="button" class="btn btn-sm btn-success pull-right" ng-click="saveStore()" ng-cloak>
+                <i class="fa fa-floppy-o"></i> {{ mc.translate('SAVE') }}
             </button>
         </div>
     </div>
