--- a/src/AdministrationBundle/Resources/views/header/header.html.twig
+++ b/src/AdministrationBundle/Resources/views/header/header.html.twig
@@ -1,3 +1,5 @@
+{% import 'macros.html.twig' as mc %}
+
 <div class="navbar navbar-default navbar-fixed-top">
     <div role="navigation">
         <div class="container">
@@ -8,60 +10,60 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ path('administration_dashboard') }}" ng-cloak>{{ ng.translate('TCM.LABEL') }} - {{ ng.translate('ADMINISTRATION.LABEL') }}</a>
+                <a class="navbar-brand" href="{{ path('administration_dashboard') }}" ng-cloak>{{ mc.translate('TCM.LABEL') }} - {{ mc.translate('ADMINISTRATION.LABEL') }}</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     {# Users #}
                     <li>
-                        <a href="{{ path('administration_users') }}" ng-click="" ng-cloak>{{ ng.translate('HEADER.USERS') }}</a>
+                        <a href="{{ path('administration_users') }}" ng-click="" ng-cloak>{{ mc.translate('HEADER.USERS') }}</a>
                     </li>
 
                     {# Companies #}
                     <li class="dropdown">
                         <a href="#" data-toggle="dropdown">
-                            <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ ng.translate('COMPANY.LABEL') }} <b class="caret"></b></div>
+                            <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ mc.translate('COMPANY.LABEL') }} <b class="caret"></b></div>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ path('administration_companies') }}" ng-cloak> {{ ng.translate('COMPANY.COMPANIES') }} </a></li>
-                            <li><a href="{{ path('administration_stores') }}" ng-cloak> {{ ng.translate('STORE.STORES') }} </a></li>
-                            <li><a href="{{ path('administration_regions') }}" ng-cloak> {{ ng.translate('COMPANY.REGIONS') }} </a></li>
-                            <li><a href="{{ path('administration_inventory') }}" ng-cloak> {{ ng.translate('INVENTORY.LABEL') }} </a></li>
+                            <li><a href="{{ path('administration_companies') }}" ng-cloak> {{ mc.translate('COMPANY.COMPANIES') }} </a></li>
+                            <li><a href="{{ path('administration_stores') }}" ng-cloak> {{ mc.translate('STORE.STORES') }} </a></li>
+                            <li><a href="{{ path('administration_regions') }}" ng-cloak> {{ mc.translate('COMPANY.REGIONS') }} </a></li>
+                            <li><a href="{{ path('administration_inventory') }}" ng-cloak> {{ mc.translate('INVENTORY.LABEL') }} </a></li>
                         </ul>
                     </li>
 
                     {# Configuration #}
                     <li class="dropdown">
                         <a href="#" data-toggle="dropdown">
-                            <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ ng.translate('CONFIGURATION.LABEL') }} <b class="caret"></b></div>
+                            <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ mc.translate('CONFIGURATION.LABEL') }} <b class="caret"></b></div>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ path('configuration_stores') }}" ng-cloak> {{ ng.translate('CONFIGURATION.STORES') }} </a></li>
-                            <li><a href="{{ path('configuration_installation') }}" ng-cloak> {{ ng.translate('INSTALLATION.SENSORS') }} </a></li>
-                            <li><a href="{{ path('configuration_packetlog') }}" ng-cloak> {{ ng.translate('CONFIGURATION.PACKET_LOG') }} </a></li>
+                            <li><a href="{{ path('configuration_stores') }}" ng-cloak> {{ mc.translate('CONFIGURATION.STORES') }} </a></li>
+                            <li><a href="{{ path('configuration_installation') }}" ng-cloak> {{ mc.translate('INSTALLATION.SENSORS') }} </a></li>
+                            <li><a href="{{ path('configuration_packetlog') }}" ng-cloak> {{ mc.translate('CONFIGURATION.PACKET_LOG') }} </a></li>
                         </ul>
                     </li>
 
                     {# Maintenance #}
                     <li class="dropdown">
                         <a href="#" data-toggle="dropdown">
-                            <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ ng.translate('MAINTENANCE.LABEL') }} <b class="caret"></b></div>
+                            <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ mc.translate('MAINTENANCE.LABEL') }} <b class="caret"></b></div>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ path('administration_maintenance_general') }}" ng-cloak> {{ ng.translate('MAINTENANCE.GENERAL') }} </a></li>
-                            <li><a href="{{ path('administration_maintenance_periodically') }}" ng-cloak> {{ ng.translate('MAINTENANCE.PERIODICALLY') }} </a></li>
-                            <li><a href="{{ path('administration_maintenance_log') }}" ng-cloak> {{ ng.translate('MAINTENANCE.LOG') }} </a></li>
+                            <li><a href="{{ path('administration_maintenance_general') }}" ng-cloak> {{ mc.translate('MAINTENANCE.GENERAL') }} </a></li>
+                            <li><a href="{{ path('administration_maintenance_periodically') }}" ng-cloak> {{ mc.translate('MAINTENANCE.PERIODICALLY') }} </a></li>
+                            <li><a href="{{ path('administration_maintenance_log') }}" ng-cloak> {{ mc.translate('MAINTENANCE.LOG') }} </a></li>
                         </ul>
                     </li>
 
                     {# Notifications #}
                     <li class="dropdown">
                         <a href="#" data-toggle="dropdown">
-                            <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ ng.translate('NOTIFICATIONS.LABEL') }} <b class="caret"></b></div>
+                            <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ mc.translate('NOTIFICATIONS.LABEL') }} <b class="caret"></b></div>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ path('administration_open_notifications') }}" ng-cloak> {{ ng.translate('NOTIFICATIONS.OPEN_NOTIFICATIONS') }} </a></li>
-                            <li><a href="{{ path('administration_closed_notifications') }}" ng-cloak> {{ ng.translate('NOTIFICATIONS.CLOSED_NOTIFICATIONS') }} </a></li>
+                            <li><a href="{{ path('administration_open_notifications') }}" ng-cloak> {{ mc.translate('NOTIFICATIONS.OPEN_NOTIFICATIONS') }} </a></li>
+                            <li><a href="{{ path('administration_closed_notifications') }}" ng-cloak> {{ mc.translate('NOTIFICATIONS.CLOSED_NOTIFICATIONS') }} </a></li>
                         </ul>
                     </li>
                 </ul>
@@ -71,8 +73,8 @@
                             <i class="icon-book icon-white"></i><div class="inline" ng-cloak>{{ '{{ AUTH.user().Name }}' }} <b class="caret"></b></div>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="" ng-click="showProfile()" ng-cloak> {{ ng.translate('USER.PROFILE') }} </a></li>
-                            <li><a href="{{ path('tcm_logout') }}" ng-cloak> {{ ng.translate('AUTH.LOGOUT') }} </a></li>
+                            <li><a href="" ng-click="showProfile()" ng-cloak> {{ mc.translate('USER.PROFILE') }} </a></li>
+                            <li><a href="{{ path('tcm_logout') }}" ng-cloak> {{ mc.translate('AUTH.LOGOUT') }} </a></li>
                         </ul>
                     </li>
                 </ul>
