--- a/src/AdministrationBundle/Resources/views/inventory/inventory_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/inventory/inventory_form.html.twig
@@ -1,8 +1,10 @@
+{% import 'macros.html.twig' as mc %}
+
 <div class="container" ng-form="inventoryForm">
 
     {# Inventory information #}
     <h5 ng-cloak>
-        <i class="fa fa-fw fa-list"></i> {{ ng.translate('INVENTORY.LABEL') }} {{ ng.translate('INVENTORY.OF') }} {{ store.Name }}
+        <i class="fa fa-fw fa-list"></i> {{ mc.translate('INVENTORY.LABEL') }} {{ mc.translate('INVENTORY.OF') }} {{ store.Name }}
     </h5>
     <div class="well">
         {% verbatim %}
@@ -96,7 +98,7 @@
 
     {# Upload files #}
     <h5 ng-cloak>
-        <i class="fa fa-fw fa-upload"></i> {{ ng.translate('COLLECTIONS.UPLOAD') }}
+        <i class="fa fa-fw fa-upload"></i> {{ mc.translate('COLLECTIONS.UPLOAD') }}
     </h5>
     <div class="well">
         {% verbatim %}
@@ -109,11 +111,11 @@
         <div class="row">
             <div class="col-md-12">
                 <button class="btn btn-sm btn-default pull-left" ng-click="showCollections('administration_inventory')" ng-cloak>
-                    <i class="fa fa-close"></i> {{ ng.translate('CANCEL') }}
+                    <i class="fa fa-close"></i> {{ mc.translate('CANCEL') }}
                 </button>
                 <button class="btn btn-sm btn-success pull-right" ng-click="saveCollectionData()"
                         ng-disabled="inventoryForm.$invalid">
-                    <i class="fa fa-floppy-o" ng-cloak></i> {{ ng.translate('SAVE') }}
+                    <i class="fa fa-floppy-o" ng-cloak></i> {{ mc.translate('SAVE') }}
                 </button>
             </div>
         </div>
