--- a/src/AdministrationBundle/Resources/views/regions/add_region.html.twig
+++ b/src/AdministrationBundle/Resources/views/regions/add_region.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import 'macros.html.twig' as mc %}
 
 {% import _self as form %}
 
@@ -17,7 +18,7 @@
                     <div class="row">
                         <div class="panel-body">
                             <h4 ng-cloak>
-                                <i class="fa fa-map-marker"></i> {{ ng.translate('REGIONS.REGION') }}
+                                <i class="fa fa-map-marker"></i> {{ mc.translate('REGIONS.REGION') }}
                             </h4>
                             <hr/>
                             {%  include 'AdministrationBundle:regions:region_form.html.twig' %}
