--- a/src/AdministrationBundle/Resources/views/users/add_user.html.twig
+++ b/src/AdministrationBundle/Resources/views/users/add_user.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import 'macros.html.twig' as mc %}
 
 {% import _self as form %}
 
@@ -17,7 +18,7 @@
                     <div class="row">
                         <div class="panel-body">
                             <h4 ng-cloak>
-                                <i class="fa fa-user"></i> {{ ng.translate('USER.LABEL') }}
+                                <i class="fa fa-user"></i> {{ mc.translate('USER.LABEL') }}
                             </h4>
                             <hr/>
                             {%  include 'AdministrationBundle:users:user_form.html.twig' %}
