--- a/src/AdministrationBundle/Resources/views/users/users.html.twig
+++ b/src/AdministrationBundle/Resources/views/users/users.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import 'macros.html.twig' as mc %}
 
 {% block contents %}
     {% if app.user %}
@@ -14,7 +15,7 @@
                         <div class="row">
                             <div class="panel-body">
                                 <h4 ng-cloak>
-                                    <i class="fa fa-users"></i> {{ ng.translate('USERS') }}
+                                    <i class="fa fa-users"></i> {{ mc.translate('USERS') }}
                                 </h4>
                                 <hr/>
                                 <div class="well table-responsive">
@@ -22,7 +23,7 @@
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
                                                 <input st-search class="form-control input-sm"
-                                                       placeholder="{{ ng.translate('SEARCH') }}" type="text" ng-cloak/>
+                                                       placeholder="{{ mc.translate('SEARCH') }}" type="text" ng-cloak/>
                                             </div>
                                         </div>
                                         <br/>
@@ -32,9 +33,9 @@
                                                     <thead>
                                                     <tr>
                                                         <th st-sort="Name" class="st-sortable col-md-10 col-xs-8"
-                                                            ng-cloak>{{ ng.translate('USER.NAME') }}</th>
+                                                            ng-cloak>{{ mc.translate('USER.NAME') }}</th>
                                                         <th class="st-nosort text-right col-md-2 col-xs-4"
-                                                            ng-cloak>{{ ng.translate('ACTION') }}</th>
+                                                            ng-cloak>{{ mc.translate('ACTION') }}</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
@@ -68,7 +69,7 @@
                                         <div class="col-md-12 col-xs-12">
                                             <button class="btn btn-sm btn-success pull-right"
                                                     ng-click="addUser()" ng-cloak>
-                                                <i class="fa fa-plus"></i> {{ ng.translate('ADD') }}</button>
+                                                <i class="fa fa-plus"></i> {{ mc.translate('ADD') }}</button>
                                         </div>
                                     </div>
                                 </div>
