--- a/src/AppBundle/Resources/views/dashboard/dashboard.html.twig
+++ b/src/AppBundle/Resources/views/dashboard/dashboard.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import 'macros.html.twig' as mc %}
 
 {% block contents %}
     {% if app.user %}
@@ -19,7 +20,7 @@
                                             <i class="fa fa-map-marker fa-5x fa-fw"></i>
                                         </div>
                                         <div class="col-xs-9 text-right big-button-text" ng-cloak>
-                                            {{ ng.translate('STORE.STORES') }}
+                                            {{ mc.translate('STORE.STORES') }}
                                         </div>
                                     </div>
                                 </div>
@@ -33,7 +34,7 @@
                                             <i class="fa fa-user-circle fa-5x fa-fw"></i>
                                         </div>
                                         <div class="col-xs-9 text-right big-button-text" ng-cloak>
-                                            {{ ng.translate('USER.PROFILE') }}
+                                            {{ mc.translate('USER.PROFILE') }}
                                         </div>
                                     </div>
                                 </div>
@@ -47,7 +48,7 @@
                                             <i class="fa fa-sign-out fa-5x fa-fw"></i>
                                         </div>
                                         <div class="col-xs-9 text-right big-button-text" ng-cloak>
-                                            {{ ng.translate('AUTH.LOGOUT') }}
+                                            {{ mc.translate('AUTH.LOGOUT') }}
                                         </div>
                                     </div>
                                 </div>
@@ -63,7 +64,7 @@
                                             <i class="fa fa-briefcase fa-5x fa-fw"></i>
                                         </div>
                                         <div class="col-xs-9 text-right big-button-text" ng-cloak>
-                                            {{ ng.translate('ADMINISTRATION.LABEL') }}
+                                            {{ mc.translate('ADMINISTRATION.LABEL') }}
                                         </div>
                                     </div>
                                 </div>
