--- a/src/AppBundle/Resources/views/store/dashboard.html.twig
+++ b/src/AppBundle/Resources/views/store/dashboard.html.twig
@@ -1,3 +1,5 @@
+{% import 'macros.html.twig' as mc %}
+
 <div class="container">
     <div ng-if="stores.store().IsMaintenance" class="row">
         <div class="col-xs-12 col-md-12 col-lg-12">
@@ -8,14 +10,14 @@
                             <i class="fa fa-exclamation-triangle fa-5x fa-fw"></i>
                         </div>
                         <div class="col-xs-10 text-center big-button-text" style="font-size: 20px;" ng-cloak>
-                            {{ ng.translate('STORE.IN_MAINTENANCE') }}
+                            {{ mc.translate('STORE.IN_MAINTENANCE') }}
                         </div>
                     </div>
                 </div>
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-xs-offset-2 text-center" style="font-size: 16px;" ng-cloak>
-                            {{ ng.translate('STORE.MAINTENANCE_STARTED') }}
+                            {{ mc.translate('STORE.MAINTENANCE_STARTED') }}
                             {% verbatim %}
                                 {{ stores.store().MaintenanceStartedAt.date | GMT: 'HH:mm:ss DD-MM-YYYY' }}
                             {% endverbatim %}
@@ -52,7 +54,7 @@
                             <i class="fa fa-info-circle fa-5x fa-fw"></i>
                         </div>
                         <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ ng.translate('STORE.INFORMATION') }}
+                            {{ mc.translate('STORE.INFORMATION') }}
                         </div>
                     </div>
                 </div>
@@ -68,7 +70,7 @@
                             <i class="fa fa-list fa-5x fa-fw"></i>
                         </div>
                         <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ ng.translate('INVENTORY.LABEL') }}
+                            {{ mc.translate('INVENTORY.LABEL') }}
                         </div>
                     </div>
                 </div>
@@ -84,7 +86,7 @@
                             <i class="fa fa-thermometer-half fa-5x fa-fw"></i>
                         </div>
                         <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ ng.translate('SENSOR.SENSORS') }}
+                            {{ mc.translate('SENSOR.SENSORS') }}
                         </div>
                     </div>
                 </div>
@@ -100,7 +102,7 @@
                             <i class="fa fa-wrench fa-5x fa-fw"></i>
                         </div>
                         <div class="col-xs-10 text-right big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ ng.translate('MAINTENANCE.LABEL') }}
+                            {{ mc.translate('MAINTENANCE.LABEL') }}
                         </div>
                     </div>
                 </div>
@@ -123,7 +125,7 @@
                             </span>
                         </div>
                         <div class="col-xs-8 text-right big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ ng.translate('NOTIFICATIONS.LABEL') }}
+                            {{ mc.translate('NOTIFICATIONS.LABEL') }}
                         </div>
                     </div>
                 </div>
@@ -136,7 +138,7 @@
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-12 text-left big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ ng.translate('BACK') }}
+                            {{ mc.translate('BACK') }}
                             <i class="fa fa-chevron-left fa-2x fa-fw pull-right"></i>
                         </div>
                     </div>
