--- a/src/AppBundle/Resources/views/store/notifications.html.twig
+++ b/src/AppBundle/Resources/views/store/notifications.html.twig
@@ -1,3 +1,5 @@
+{% import 'macros.html.twig' as mc %}
+
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12">
@@ -175,7 +177,7 @@
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-12 text-left big-button-text" style="font-size: 30px;" ng-cloak>
-                            {{ ng.translate('BACK') }}
+                            {{ mc.translate('BACK') }}
                             <i class="fa fa-chevron-left fa-2x fa-fw pull-right"></i>
                         </div>
                     </div>
