--- a/src/AppBundle/Resources/views/stores/stores.html.twig
+++ b/src/AppBundle/Resources/views/stores/stores.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% import 'macros.html.twig' as mc %}
 
 {% block contents %}
     {% if app.user %}
@@ -14,7 +15,7 @@
                         <div class="row" ng-show="AUTH.isSuperAdmin()">
                             <div class="panel-body">
                                 <h4 ng-cloak>
-                                    <i class="fa fa-map-marker"></i> {{ ng.translate('STORE.STORES') }}
+                                    <i class="fa fa-map-marker"></i> {{ mc.translate('STORE.STORES') }}
                                 </h4>
                                 <hr/>
                                 <div class="well table-responsive">
@@ -22,7 +23,7 @@
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
                                                 <input st-search class="form-control input-sm"
-                                                       placeholder="{{ ng.translate('SEARCH') }}" type="text" ng-cloak/>
+                                                       placeholder="{{ mc.translate('SEARCH') }}" type="text" ng-cloak/>
                                             </div>
                                         </div>
                                         <br/>
@@ -32,9 +33,9 @@
                                                     <thead>
                                                     <tr>
                                                         <th st-sort="Name" class="st-sortable col-md-10 col-xs-9"
-                                                            ng-cloak>{{ ng.translate('STORE.NAME') }}</th>
+                                                            ng-cloak>{{ mc.translate('STORE.NAME') }}</th>
                                                         <th class="st-nosort text-right col-md-2 col-xs-3"
-                                                            ng-cloak>{{ ng.translate('ACTION') }}</th>
+                                                            ng-cloak>{{ mc.translate('ACTION') }}</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
@@ -87,7 +88,7 @@
                                     <div class="panel-heading">
                                         <div class="row">
                                             <div class="col-xs-12 text-left big-button-text" ng-cloak>
-                                                {{ ng.translate('BACK') }}
+                                                {{ mc.translate('BACK') }}
                                                 <i class="fa fa-chevron-left fa-2x fa-fw pull-right"></i>
                                             </div>
                                         </div>
